--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author: Sungjin Lee
+author_bio: 안녕하세요, 예비 개발자 이성진입니다
+author_email: "ksji86@naver.com"
+author_location: Korea
+author_website_url: "https://www.linkedin.com/in/sungjin-lee-4b3960145/"
+typewrite-text: 끊임없이 생각하고 고민하여 문제를 해결 해 나갑니다
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
