--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -47,3 +47,15 @@ xplor4r:
       - title: "facebook"
         url: "https://www.facebook.com/sujay.kundu2"
 
+sungjin:
+    name: Sungjin Lee
+    username: sungjin
+    bio: "예비 개발자 이성진 입니다"
+    site: https://sungjin7564.github.io/#/
+    avatar: sungjin.png
+    email: ksji86@naver.com
+    social:
+        - title: "github"
+          url: "https://github.com/sungjin7564"
+        - title: "linkedin"
+          url: "https://www.linkedin.com/in/sungjin-lee-4b3960145"
