--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: sujaykundu777/sujaykundu777.github.io
+  repo: sungjin7564/sungjin7564.github.io
   branch: master
   site_domain: agitated-northcutt-53b578.netlify.app
 
