--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: sungjin7564/sungjin7564.github.io
   branch: master
-  site_domain: astonishing-rolypoly-802dfb.netlify.app
+  site_domain: sungjin7564.github.io
 
 media_folder: "assets/img/posts" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img/posts" # The src attribute for uploaded media will begin with /images/uploads
