--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sungjin
 subtitle: 예비 개발자
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  끊임없이 생각하고 고민하여 문제를 해결 해 나갑니다
 
 url: "https://sungjin7564.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
