--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sungjin
-subtitle: 예비 개발자
+subtitle: Python Developer
 description: >- # this means to ignore newlines until "baseurl:"
   끊임없이 생각하고 고민하여 문제를 해결 해 나갑니다
 
