--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -50,7 +50,7 @@ xplor4r:
 sungjin:
     name: Sungjin Lee
     username: sungjin
-    bio: "예비 개발자 이성진 입니다"
+    bio: "Backend Developer 이성진 입니다"
     site: https://sungjin7564.github.io/#/
     avatar: sungjin.png
     email: ksji86@naver.com
