--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author_work_experiences:
               description: Dispatched to P&G Chonan Plant and supported the entire plant 
               visibility: true
             - company_name: Excis Ltd
-              company_logo: excis.png
+              company_logo: excis.jpg
               company_url: https://www.excis.com/
               designation: Network & Security Management and IT Service Desk
               description: Dispatched to P&G Chonan Plant and supported the entire plant 
